<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlueRemote</string>
    <string name="dl_activity">Device List</string>
	<string name="hexboard">HexBoard</string>
	<string name="programming_activity">Set Values</string>
    <string name="terminal">Terminal</string>
    <string name="devices_to_disconnect">Devices To Disconnect</string>
	<string name="color_picker">Color Picker</string>
	
	<string name="nothing">     </string>
	
    <string name="splash_image_description">App Logo</string>
	
	<string name="power_switch">Power</string>
	<string name="mute_switch">Mute</string>
	<string name="volume_up">V+</string>
	<string name="volume_down">V-</string>
	<string name="channel_up">CH+</string>
	<string name="channel_down">CH-</string>
	<string name="send">Send</string>
	<string name="select">Select</string>
	<string name="aaa">   A   </string>	
	<string name="bbb">   B   </string>
	<string name="ccc">   C   </string>
	
	<string name="set_value">Set Value</string>	
	
	<string name="refresh">Refresh</string>
	
	<string name="Button16_hexboard">F</string>
    <string name="Button15_hexboard">E</string>
    <string name="Button14_hexboard">D</string>
    <string name="Button13_hexboard">C</string>
    <string name="Button12_hexboard">B</string>
    <string name="Button11_hexboard">A</string>
    <string name="Button10_hexboard">0</string>
    <string name="Button09_hexboard">9</string>
    <string name="Button08_hexboard">8</string>
    <string name="Button07_hexboard">7</string>
    <string name="Button06_hexboard">6</string>
    <string name="Button05_hexboard">5</string>
    <string name="Button04_hexboard">4</string>
    <string name="Button03_hexboard">3</string>
    <string name="Button02_hexboard">2</string>
    <string name="Button01_hexboard">1</string>
	
    <string name="Button17_hexboard">OK</string>
    <string name="Button18_hexboard">&lt;</string>
    
    <string name="enter_button_text">Enter Button Text:</string>
    <string name="enter_button_code">Enter Button Code:</string>
    <string name="enter_button_on_up_code">Enter Button On Up Code:</string>
    <string name="enter_button_on_down_code">Enter Button On Down Code:</string>
    
    <string name="enter_switch_text">Enter Switch Text:</string>
    <string name="enter_switch_code">Enter Switch Code:</string>
    <string name="enter_switch_on_code">Enter Switch On Code:</string>
    <string name="enter_switch_off_code">Enter Switch Off Code:</string>
    
    <string name="continuous_touch">Continuous Touch</string>
    <string name="select_devices">Select Devices</string>
    <string name="set_component_device_list">Set Component Device List:</string>
    <string name="ok">  OK  </string>
    
    <string name="clear">Clear</string>
    <string name="devices">Devices</string>
    
    <string name="bluetooth_device">Bluetooth Device</string>
    <string name="bluetooth_device_assignment">Bluetooth Device Assignment:</string>
    <string name="assign_all_devices">All Devices</string>
    <string name="assign_latest_device_if_list_empty">Latest Device If List Is Empty</string>
    <string name="do_not_assign">Do Not Assign</string>
    
    <string name="control_interface">Control Interface</string>
    <string name="button_repetition_period">Button Repetition Period(in ms):</string>
    
    <string name="clear_input_on_send">Clear Input On Send</string>
    <string name="set_number_of_terminals">Set Number Of Terminal:</string>
    
    <string-array name="spinner_items">
    	<item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    
    <string name="spinner_item">Spinner Item</string>
    
    <string name="set_color">Set Color:</string>
    <string name="set_background_color">Set Background Color:</string>
    
    <string name="set_foreground_color">Set Foreground Color:</string>
    <string name="select_device">Select Device:</string>
    <string name="for_incoming_data">For Incoming Data:</string>
    <string name="for_outgoing_data">For Outgoing Data:</string>
    
    <string name="hex_board_call_time_out_factor">Call Time Out Factor:</string>
    <string name="hex_board_backspace_repetition_period">Backspace Repetition Period(in ms):</string>
    
    <string name="alpha">Alpha</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="two_five_five">255</string>
    <string name="FF">FF</string>
    <string name="hash">#</string>
    <string name="hashFFFFFFFF">#FFFFFFFF</string>
    
    <string name="bt_connect_device">Connect New Device</string>
    <string name="bt_disconnect_device">Disconnect a Device</string>
    <string name="enable_discoverability">Enable Discoverability</string>
    <string name="disable_discoverability">Disable Discoverability</string>
    
    <string name="program_mode">Program Mode</string>
    <string name="normal_mode">Normal Mode</string>
    
    <string name="preferences">Preferences</string>
    
    <string name="lv_item">lv item</string>
</resources>
