<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<Button
            android:id="@+id/Button02_hexboard"
            
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Button01_hexboard"
            android:layout_alignBottom="@+id/Button01_hexboard"
            android:layout_toRightOf="@+id/Button01_hexboard"
            android:text="@string/Button02_hexboard" />

        <Button
            android:id="@+id/Button03_hexboard"
            
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Button02_hexboard"
            android:layout_alignBottom="@+id/Button02_hexboard"
            android:layout_toRightOf="@+id/Button02_hexboard"
            android:text="@string/Button03_hexboard" />

        <Button
            android:id="@+id/Button04_hexboard"
            
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Button03_hexboard"
            android:layout_alignBottom="@+id/Button03_hexboard"
            android:layout_toRightOf="@+id/Button03_hexboard"
            android:text="@string/Button04_hexboard" />

        <Button
            android:id="@+id/Button05_hexboard"
            
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Button01_hexboard"
            android:layout_toLeftOf="@+id/Button02_hexboard"
            android:text="@string/Button05_hexboard" />

        <Button
            android:id="@+id/Button06_hexboard"
            
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Button05_hexboard"
            android:layout_alignBottom="@+id/Button05_hexboard"
            android:layout_toRightOf="@+id/Button05_hexboard"
            android:text="@string/Button06_hexboard" />

        <Button
            android:id="@+id/Button07_hexboard"
            
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Button03_hexboard"
            android:layout_toLeftOf="@+id/Button04_hexboard"
            android:text="@string/Button07_hexboard" />

        <Button
            android:id="@+id/Button08_hexboard"
            
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Button07_hexboard"
            android:layout_alignBottom="@+id/Button07_hexboard"
            android:layout_toRightOf="@+id/Button07_hexboard"
            android:text="@string/Button08_hexboard" />

        <Button
            android:id="@+id/Button10_hexboard"
            
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Button05_hexboard"
            android:layout_toRightOf="@+id/Button05_hexboard"
            android:text="@string/Button10_hexboard" />

        <Button
            android:id="@+id/Button11_hexboard"
            
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Button07_hexboard"
            android:layout_toLeftOf="@+id/Button08_hexboard"
            android:text="@string/Button11_hexboard" />

        <Button
            android:id="@+id/Button12_hexboard"
            
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Button08_hexboard"
            android:layout_below="@+id/Button08_hexboard"
            android:text="@string/Button12_hexboard" />

        <Button
            android:id="@+id/Button13_hexboard"
            
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Button09_hexboard"
            android:layout_toLeftOf="@+id/Button10_hexboard"
            android:text="@string/Button13_hexboard" />

        <Button
            android:id="@+id/Button14_hexboard"
            
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Button13_hexboard"
            android:layout_alignBottom="@+id/Button13_hexboard"
            android:layout_toLeftOf="@+id/Button11_hexboard"
            android:text="@string/Button14_hexboard" />

        <Button
            android:id="@+id/Button15_hexboard"
            
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Button14_hexboard"
            android:layout_alignBottom="@+id/Button14_hexboard"
            android:layout_toLeftOf="@+id/Button12_hexboard"
            android:text="@string/Button15_hexboard" />

        <Button
            android:id="@+id/Button16_hexboard"
            
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Button12_hexboard"
            android:layout_below="@+id/Button12_hexboard"
            android:text="@string/Button16_hexboard" />

        <Button
            android:id="@+id/Button09_hexboard"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Button05_hexboard"
            android:layout_toLeftOf="@+id/Button06_hexboard"
            android:text="@string/Button09_hexboard" />

        <Button
            android:id="@+id/Button01_hexboard"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="130dp"
            android:text="@string/Button01_hexboard" />

        <Button
            android:id="@+id/Button17_hexboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Button14_hexboard"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/Button17_hexboard" 
            />

        <EditText
            android:id="@+id/editText1_hexboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/Button02_hexboard"
            android:layout_alignLeft="@+id/Button01_hexboard"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:inputType="textCapCharacters" 
            android:digits="0123456789ABCDEFabcdef"
             >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/Button18_hexboard"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText1_hexboard"
            android:layout_alignBottom="@+id/editText1_hexboard"
            android:layout_toRightOf="@+id/editText1_hexboard"
            android:text="@string/Button18_hexboard" />

</RelativeLayout>
