<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
	
        <Space
	        android:layout_width="match_parent"
	        android:layout_height="5dp" />

        <TextView
            android:id="@+id/textView6_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_device"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView7_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_device_assignment"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <RadioGroup
            android:id="@+id/radioGroup_preferences"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        
        <RadioButton
            android:id="@+id/radioButton1_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assign_all_devices" />

        <RadioButton
            android:id="@+id/radioButton2_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assign_latest_device_if_list_empty" />

        <RadioButton
            android:id="@+id/radioButton3_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not_assign" />
        
        </RadioGroup>
        
        <Space
	        android:layout_width="match_parent"
	        android:layout_height="5dp" />
        
        <View
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:background="#FF0000"/>
        
        <Space
	        android:layout_width="match_parent"
	        android:layout_height="5dp" />
        
        <TextView
            android:id="@+id/textView1_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_interface"
            android:textAppearance="?android:attr/textAppearanceLarge" />
		
        <TextView
            android:id="@+id/textView2_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_repetition_period"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText1_preferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" >

        </EditText>

        <Space
	        android:layout_width="match_parent"
	        android:layout_height="5dp" />
        
        <View
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:background="#FF0000"/>
        
        <Space
	        android:layout_width="match_parent"
	        android:layout_height="5dp" />
        
        <TextView
            android:id="@+id/textView3_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hexboard"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView4_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hex_board_call_time_out_factor"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText2_preferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView5_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hex_board_backspace_repetition_period"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText3_preferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <Space
	        android:layout_width="match_parent"
	        android:layout_height="5dp" />
        
        <View
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:background="#FF0000"/>
        
        <Space
	        android:layout_width="match_parent"
	        android:layout_height="5dp" />
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1_preferences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/ok" />

        </RelativeLayout>
        
    </LinearLayout>

</ScrollView>
