<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/scrollView1_cif"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   tools:context="com.alex.blueremote.MainActivity"  
   >

<RelativeLayout
    android:id="@+id/main_layout_cif"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    >
	
   <TextView
       android:id="@+id/textView1_cif"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:background="#FF0F0F"
       android:gravity="center"
       android:text="@string/program_mode"
       android:textAppearance="?android:attr/textAppearanceLarge"
       android:textColor="#FFFFFF" />
        
    <EditText
        android:id="@+id/editText1_cif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button5_cif"
        android:layout_below="@+id/button5_cif"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="text" 
	>
    </EditText>

    <Button
        android:id="@+id/button6_cif"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText1_cif"
        android:layout_alignBottom="@+id/editText1_cif"
        android:layout_alignLeft="@+id/button4_cif"
        android:layout_alignRight="@+id/button4_cif"
        android:text="@string/send" />

    <Switch
        android:id="@+id/switch2_cif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/switch1_cif"
        android:layout_below="@+id/switch1_cif"
        android:layout_marginTop="18dp"
        android:text="@string/mute_switch" />

    <Button
        android:id="@+id/button2_cif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1_cif"
        android:layout_marginRight="14dp"
        android:layout_marginTop="17dp"
        android:layout_toLeftOf="@+id/button3_cif"
        android:text="@string/volume_down" />

    <Button
        android:id="@+id/button3_cif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2_cif"
        android:layout_alignBottom="@+id/button2_cif"
        android:layout_centerHorizontal="true"
        android:text="@string/select" />

    <Button
        android:id="@+id/button5_cif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3_cif"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/channel_down" />

    <Button
        android:id="@+id/button1_cif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button5_cif"
        android:layout_below="@+id/switch2_cif"
        android:layout_marginTop="26dp"
        android:text="@string/channel_up" />

    <Button
        android:id="@+id/button4_cif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button5_cif"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/button3_cif"
        android:text="@string/volume_up" />
	
    <!-- 
    <fragment
        android:id="@+id/fragment1"
        android:name="com.alex.blueremote.blank_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignTop="@+id/button2" />
	 -->

    <Switch
        android:id="@+id/switch1_cif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1_cif"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/power_switch" />
	 
</RelativeLayout>
</ScrollView>