<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/scrollView1"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
     >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/textView_1_pa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_button_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <EditText
        android:id="@+id/editText_1_pa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="text"
        android:maxLength="6" >

        <!-- <requestFocus /> -->
    </EditText>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    
    <TextView
        android:id="@+id/textView_2_pa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_button_code"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <EditText
        android:id="@+id/editText_2_pa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10" 
        android:inputType="text"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
	
    <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    >

        <CheckBox
            android:id="@+id/checkBox_1_pa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continuous_touch" 
            android:textSize="22sp"/>

    <Space
        android:layout_width="80dp"
        android:layout_height="match_parent" />
    
    </LinearLayout>
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    
    <TextView
        android:id="@+id/textView_3_pa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_button_on_down_code"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <EditText
        android:id="@+id/editText_3_pa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10" 
        android:inputType="text"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    
    <TextView
        android:id="@+id/textView_4_pa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_button_on_up_code"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <EditText
        android:id="@+id/editText_4_pa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10" 
        android:inputType="text"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/button_2_pa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_devices" />
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    
    <Button
        android:id="@+id/button_1_pa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ok" />
    
</LinearLayout>

</ScrollView>